--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -2,10 +2,8 @@
 
 <br>
 
-<div class="row">
-    <div class="col-xs-12 col-md-offset-4 col-md-4">
-        <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" class="node-thumbnail"></div>
-    </div>
+<div class="add-node-title">
+  <img src="{{nodeType.logo}}" class="add-node-logo">
 </div>
 
 <br>
