--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -15,14 +15,14 @@
       </div>
     </form>
 
-    <div class="row">
-      <div ng-repeat="nodeType in nodeTypes | filter: {name:nodeTypeSearch} | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2" style="height: 250px;">
-        <h4 class="text-center">
-          <a class="" ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})">
-            <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" title="{{nodeType.name}}" class="node-thumbnail animated-popout"></div>
-            <strong class="muted-link">{{nodeType.name}}</strong>
-          </a>
-        </h4>
+    <div class="connected-nodes">
+      <div class="connected-node" ng-repeat="node in nodeTypes | filter: {name:nodeTypeSearch} | orderBy: 'name'">
+        <a ui-sref="material.nodewizard.add({nodeTypeId: node._id})">
+          <div title="{{node.name}}" class="connected-node-thumbnail animated-popout">
+            <img ng-src="{{node.logo}}" width="100%" height="100%">
+          </div>
+          <div class="connected-node-name">{{node.name}}</div>
+        </a>
       </div>
     </div>
   </div>
