removing flexbox stuff

--- a/public/angular/directives/bill-of-materials/bill-of-materials.html
+++ b/public/angular/directives/bill-of-materials/bill-of-materials.html
@@ -1,5 +1,5 @@
-<md-content class="bill-of-materials" flex layout="row" layout-wrap="wrap" layout-align="space-around" ng-class="{importing: importing}">
-  <div layout="column" ng-repeat="material in materials">
+<md-content class="bill-of-materials" ng-class="{importing: importing}">
+  <div class="bill-of-materials__items" ng-repeat="material in materials">
     <div class="bill-of-materials-icon" ng-style="{ 'background-image': 'url(' + material.logo + ')' }">
     </div>
     <div class="md-tile-content">
