--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,4 +1,4 @@
-<div class="templates" layout-fill layout="column">
+<div class="templates">
   <md-toolbar>
       <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
           <div flex layout="row">
