Better padding on analyze page

--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div flex class="analyze-card md-whiteframe-z1" layout-align="center" layout="column">
+  <div flex class="analyze-card md-whiteframe-z1 analyze-search-card" layout-align="center" layout="column">
     <md-toolbar>
       <h2 class="md-toolbar-tools">Search</h2>
     </md-toolbar>
