--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -15,22 +15,24 @@
   </h2>
 </md-toolbar>
 
-<div class="jumbotron" ng-if="!loading && nodes.length === 0">
-  <p class="lead">
-   <span class="fa-stack fa-2x">
-    <i class="fa fa-code-fork fa-stack-1x"></i>
-    <i class="fa fa-ban fa-stack-2x text-danger"></i>
-  </span>
-  You currently have no Active Nodes</p>
-</div>
-
-<div class="connected-nodes">
-  <div class="connected-node" ng-repeat="node in nodes track by $index | filter: filterFlows | orderBy: 'name'">
-    <a href ng-href="{{nextStepUrl(node)}}" class="">
-      <div title="{{node.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: !node.online}">
-        <img ng-src="{{node.logo}}" width="100%" height="100%">
-      </div>
-      <div class="connected-node-name">{{node.name}}</div>
-    </a>
+<md-content>
+  <div class="jumbotron" ng-if="!loading && nodes.length === 0">
+    <p class="lead">
+     <span class="fa-stack fa-2x">
+      <i class="fa fa-code-fork fa-stack-1x"></i>
+      <i class="fa fa-ban fa-stack-2x text-danger"></i>
+    </span>
+    You currently have no Active Nodes</p>
   </div>
-</div>
+
+  <div class="connected-nodes">
+    <div class="connected-node" ng-repeat="node in nodes track by $index | filter: filterFlows | orderBy: 'name'">
+      <a href ng-href="{{nextStepUrl(node)}}" class="">
+        <div title="{{node.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: !node.online}">
+          <img ng-src="{{node.logo}}" width="100%" height="100%">
+        </div>
+        <div class="connected-node-name">{{node.name}}</div>
+      </a>
+    </div>
+  </div>
+</md-content>
