Fix scroll on browse

--- a/public/pages/template-browse.html
+++ b/public/pages/template-browse.html
@@ -1,4 +1,4 @@
-<div class="browse">
+<md-content class="browse">
   <md-toolbar>
       <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
           <div class="toolbar-header">
@@ -80,5 +80,4 @@
       </li>
     </ul>
   </div>
-
-</div>
+</md-content>
