Disable browse button

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -15,10 +15,10 @@
             <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
             <i class="fa fa-trash fa-lg"></i> Delete Template
           </md-button>
-          <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
+          <!-- <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
             <md-tooltip>Browse Templates</md-tooltip>
             <i class="fa fa-share-alt-square fa-lg"></i> Browse
-          </md-button>
+          </md-button> -->
       </h2>
   </md-toolbar>
   <div class="template-container">
