add detail mockup

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -30,18 +30,24 @@
       </header>
 
 
-      <div class="sidebar-body">
+      <ol class="sidebar-body">
+        <li class="collection__item collection__item--detail">
+          <img src="" alt="" class="collection__item-image">
+          <div class="collection__item-header"></div>
+          <p class="collection__item-body"></p>
+        </li>
 
-      </div>
+        <li class="collection__item collection__item--thumbnail">
+          <img src="" alt="" class="collection__item-image">
+        </li>
+      </ol>
 
       <footer class="sidebar-toolbar sidebar-toolbar--footer">
         <button class="toolbar-button"><i class="fa fa-th fa-lg"></i></button>
 
-        <form action="" class="collection-browser__form">
-          <div class="collection-browser__input-wrap">
-            <i class="fa fa-search fa-lg collection-browser__filter-icon"></i>
-            <input class="collection-browser__input" type="search" name="Filter" placeholder="Filter...">
-          </div>
+        <form action="" class="collection-browser__filter-form">
+          <i class="fa fa-search fa-lg collection-browser__filter-icon"></i>
+          <input class="collection-browser__filter-input" type="search" name="Filter" placeholder="Filter...">
         </form>
       </footer>
 
