--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -13,7 +13,7 @@
     <li ng-repeat="flow in templates | filter: {name:templateSearch}" class="md-whiteframe-z1 flow" ng-click="setCurrentTemplate(flow)">
       <div class="header">
         <h3 class="name">
-          {{flow.name}}ppppgpgpg
+          {{flow.name}}consectetur adipiscing elit, sed do eiusmod tempor
         </h3>
         <div class="actions">
           <md-button class="action md-icon-button" ng-click="controller.importFlow(flow.uuid)">
@@ -41,19 +41,19 @@
 
       <div class="footer">
         <div class="info-group">
-          <span class="info" ng-class="{liked: controller.liked(flow)}">
+          <div class="info" ng-class="{liked: controller.liked(flow)}">
             <i class="fa fa-lg fa-heart"></i> {{flow.liked_by.length}}1023
-          </span>
+          </div>
 
-          <span class="info">
+          <div class="info">
             <i class="fa fa-lg fa-user"></i> {{flow.download_count}}65535
-          </span>
+          </div>
         </div>
 
         <div class="info-group">
-          <span class="info">
+          <div class="info author">
             <i class="fa fa-lg fa-user"></i> {{flow.author || flow.resource.owner.uuid}}
-          </span>
+          </div>
         </div>
       </div>
     </li>
